--- a/src/pages/css/Login.css
+++ b/src/pages/css/Login.css
@@ -4,7 +4,7 @@ main {
   background-color: #E8E2DC;
 }
 
-#login {
+#login-div {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -79,4 +79,16 @@ hr{
   margin-top: 35px;
   margin-left: 10px;
   height: 85px;
+}
+
+.google-login-button {
+  font: inherit;
+  background-color: #DDD0C5;
+  border: none;
+  width: 300px;
+  height: 50px;
+  border-radius: 20px;
+  font-weight: 300;
+  font-size: 1.25em;
+  color: #545454;
 }
