--- a/src/pages/css/Account.css
+++ b/src/pages/css/Account.css
@@ -2,9 +2,10 @@
   display: flex;
   flex-direction: column;
   margin: 100px;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1250px;
+  margin-left: 20px;
+  margin-right: 20px;
+  min-width: 950px;
+  
 }
 
 .account-container {
@@ -13,22 +14,40 @@
 }
 
 .profile-picture {
-  margin: 0px 50px 50px 0px;
+  margin: 0px 30px 0px 0px;
+  
 }
 
 .account-info {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   width: 100%;
 }
 
-.account-info > p {
+.account-info > div {
   background-color: #FAF9F8;
-  padding: 20px calc(100% - 30px) 20px 30px;
+  padding: 20px 0px 20px 30px;
   font-size: 2em;
   margin: 0px;
-  width: 100%
+  width: calc(100% - 30px);
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+.account-info > div > p {
+  margin: 0px;
+  font-size: 0.9em;
+}
+
+.account-info > div > button {
+  font-size: 20px;
+  font-weight: 300;
+  background-color: #E8E2DC;
+  color: #545454;
+  width: auto;
+  height: 35px;
+  border-radius: 7.5px;
+  border: none;
 }
 
 .upcoming-shifts {
@@ -37,3 +56,4 @@
   padding-left: 30px;
   height: 200px;
 }
+
