--- a/src/pages/css/Calendar.css
+++ b/src/pages/css/Calendar.css
@@ -14,3 +14,54 @@
   text-align: center;
   margin-top: 50px;
 }
+
+.modal-show{
+  display: block;
+  margin-top: 50px;
+  font-family: poppins;
+  text-align: center;
+  overflow-y: auto;
+}
+
+.modal-hide{
+  display: none;
+}
+
+.modalTitle{
+  font-weight: 450;
+  color: #545454;
+  font-size: 28px;
+}
+
+.modalBody{
+  margin-top: 15px;
+  font-weight: 350;
+  font-size: 20px;
+}
+
+.modalFooter{
+  margin-top: -10px;
+}
+
+.closeModal{
+  font-size: 16px;
+  font-weight: 300;
+  background-color: #FAF9F8;
+  color: #545454;
+  width: 125px;
+  height: 30px;
+  border-radius: 50px;
+  border: none;
+}
+
+.modalDelete{
+  font-size: 16px;
+  font-weight: 300;
+  background-color: #FAF9F8;
+  color: #545454;
+  width: 125px;
+  height: 30px;
+  border-radius: 50px;
+  border: none;
+  margin-left: 80px;
+}
