--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -16,10 +16,11 @@ img#logo {
   font-weight: 300;
   background-color: #E8E2DC;
   color: #545454;
-  width: 250px;
+  width: 200px;
   height: 50px;
   border-radius: 7.5px;
   border: none;
+  margin-left: 40px;
 }
 
 .nav-links:hover {
