--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -12,15 +12,14 @@ img#logo {
 }
 
 .nav-links {
-  font-size: 25px;
+  font-size: 22px;
   font-weight: 300;
   background-color: #E8E2DC;
   color: #545454;
-  width: 200px;
+  width: 125px;
   height: 50px;
   border-radius: 7.5px;
   border: none;
-  margin-left: 40px;
 }
 
 .nav-links:hover {
@@ -31,7 +30,8 @@ img#logo {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  width: 1000px;
+  width: 600px;
+  justify-self: start;
 }
 
 .account {
