--- a/src/components/css/NavBar.css
+++ b/src/components/css/NavBar.css
@@ -20,6 +20,7 @@ img#logo {
   height: 50px;
   border-radius: 7.5px;
   border: none;
+  margin-right: 20px;
 }
 
 .nav-links:hover {
@@ -30,7 +31,7 @@ img#logo {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  width: 600px;
+  width: auto;
   justify-self: start;
 }
 
