--- a/src/pages/css/Todo.css
+++ b/src/pages/css/Todo.css
@@ -1,5 +1,5 @@
 .meals-container {
-  background-color: white;
+  background-color: #BBAB9D;
   height: 400px;
   padding: 10px;
   width: auto;
@@ -20,6 +20,54 @@
   font-weight: 450;
   color: #545454;
   text-align: center;
-  margin-top: 60px;
+  margin-bottom: 30px;
 }
 
+.chore-sheet {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  height: auto;
+  margin: 30px;
+  background-color: #BBAB9D;
+  font-family: poppins;
+}
+
+table {
+  width: 1500px;
+  margin-left: 40px;
+  table-layout: auto;
+}
+
+th{
+  height: 50px;
+  font-size: 25px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  color: #545454;
+  font-weight: 450;
+  font-family: poppins;
+}
+
+td{
+  text-align: center;
+  height: 40px;
+  color: #545454;
+  font-weight: 450;
+  font-family: poppins;
+  border: none;
+  background-color: #FAF9F8;
+}
+
+.table-button {
+  font-weight: bolder;
+  background-color: #FAF9F8;
+  width: 40px;
+  height: 40px;
+  margin: 10px 0px 10px 0px;
+}
+
+.table-button:hover {
+  background-color: #545454;
+}
