--- a/src/pages/css/Todo.css
+++ b/src/pages/css/Todo.css
@@ -9,7 +9,8 @@
 
 .meals-header{
   font-family: poppins;
-  font-weight: 450;
+  font-weight: 500;
+  font-size: 36px;
   color: #545454;
   text-align: center;
   margin-top: 50px;
@@ -17,7 +18,8 @@
 
 .chores-header{
   font-family: poppins;
-  font-weight: 450;
+  font-weight: 500;
+  font-size: 36px;
   color: #545454;
   text-align: center;
   margin-bottom: 30px;
@@ -70,4 +72,23 @@ td{
 
 .table-button:hover {
   background-color: #545454;
+}
+
+.modalTitle {
+  font-family: poppins;
+  font-size: 26px;
+}
+
+.modalNotes {
+  alignItems: center;
+  align: center;
+}
+
+.inputText {
+  margin-left: 15px;
+  border-radius: 10px;
+  border: 10px;
+  height: 25px;
+  width: 200px;
+  margin: 10px;
 }
