--- a/src/components/css/NavBar.css
+++ b/src/components/css/NavBar.css
@@ -1,7 +1,5 @@
 #navbar {
-  position: sticky;
-  top: 0;
-  z-index: 10;
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -70,3 +68,11 @@ img#logo {
   border-radius: 25px;
   object-fit: cover;
 }
+
+/* @media only screen and (min-width: 320px) {
+  #navbar{
+    width: 1200px;
+  }
+
+  
+} */
