--- a/src/pages/css/Attendance.css
+++ b/src/pages/css/Attendance.css
@@ -61,3 +61,36 @@ td {
   border-radius: 7.5px;
   border: none;
 }
+
+.optionButtons{
+  width: 175px;
+  height: 25px;
+  border-radius: 20px;
+  border: none;
+  font-size: 16px;
+  margin: 15px;
+}
+
+.submitButton{
+  width: 75px;
+  height: 25px;
+  border-radius: 20px;
+  border: none;
+  font-size: 16px;
+  margin: 15px;
+}
+
+.inputField{
+  margin-left: 5px;
+  border-radius: 10px;
+  border: 10px;
+  height: 25px;
+  width: 200px;
+}
+
+media only screen and (min-width: 320px) {
+  
+  .attendance-sheet{
+    width: auto;
+  }
+}
