--- a/src/pages/css/Calendar.css
+++ b/src/pages/css/Calendar.css
@@ -114,3 +114,13 @@
   max-width: 500px;
   width: 100%;
 }
+
+@media only screen and (min-width: 320px) {
+  .calendar-container{
+    width: 800px;
+  }
+
+  .calendar-header{
+
+  }
+}
