--- a/src/pages/css/Todo.css
+++ b/src/pages/css/Todo.css
@@ -92,3 +92,12 @@ td{
   width: 200px;
   margin: 10px;
 }
+
+.modalButtons {
+  width: 75px;
+  height: 25px;
+  border-radius: 20px;
+  border: none;
+  font-size: 16px;
+  margin: 10px;
+}
