--- a/src/pages/css/Calendar.css
+++ b/src/pages/css/Calendar.css
@@ -115,7 +115,7 @@
   width: 100%;
 }
 
-@media only screen and (min-width: 320px) {
+/* @media only screen and (min-width: 320px) {
   .calendar-container{
     width: 800px;
   }
@@ -123,4 +123,4 @@
   .calendar-header{
 
   }
-}
+} */
