--- a/src/components/css/NavBar.css
+++ b/src/components/css/NavBar.css
@@ -17,7 +17,7 @@ img#logo {
   font-weight: 300;
   background-color: #e8e2dc;
   color: #545454;
-  width: 125px;
+  width: 150px;
   height: 50px;
   border-radius: 7.5px;
   border: none;
@@ -69,10 +69,9 @@ img#logo {
   object-fit: cover;
 }
 
-/* @media only screen and (min-width: 320px) {
+@media only screen and (max-width: 768px) {
   #navbar{
     width: 1200px;
   }
-
   
-} */
+}
