--- a/src/pages/css/Calendar.css
+++ b/src/pages/css/Calendar.css
@@ -115,12 +115,8 @@
   width: 100%;
 }
 
-/* @media only screen and (min-width: 320px) {
+@media only screen and (max-width: 768px) {
   .calendar-container{
     width: 800px;
   }
-
-  .calendar-header{
-
-  }
-} */
+}
