--- a/src/pages/css/Locker.css
+++ b/src/pages/css/Locker.css
@@ -3,3 +3,29 @@ input[type=code]
   border:none;
   border-bottom: 1px solid lightgray;
 }
+
+.button {
+  width: 175px;
+  height: 30px;
+  border-radius: 20px;
+  border: none;
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+.mini-button {
+  width: 90px;
+  height: 30px;
+  border-radius: 20px;
+  border: none;
+  font-size: 14px;
+  margin: 7.5px;
+}
+
+.inputText {
+  margin-left: 15px;
+  border-radius: 10px;
+  border: 10px;
+  height: 25px;
+  width: 200px;
+}
