--- a/src/pages/css/Todo.css
+++ b/src/pages/css/Todo.css
@@ -68,10 +68,11 @@ td{
   width: 40px;
   height: 40px;
   margin: 10px 0px 10px 0px;
+  border: 2px solid black;
 }
 
 .table-button:hover {
-  background-color: #545454;
+  background-color: #c2bdbd;
 }
 
 .modalTitle {
@@ -100,4 +101,16 @@ td{
   border: none;
   font-size: 16px;
   margin: 10px;
+}
+
+
+@media only screen and (max-width: 768px) {
+  
+  .meals-container{
+    width: 600px;
+  }
+
+  .chore-sheet{
+    width: 850px
+  }
 }
